--- a/src/assets/scss/modals/_modals.scss
+++ b/src/assets/scss/modals/_modals.scss
@@ -360,7 +360,8 @@ h1 {
       .modal-content {
         .select-discount,
         .dining-options-block,
-        .add-note-wrap {
+        .add-note-wrap,
+        .change-amount-option {
           min-height: 0 !important;
           margin-bottom: 0px !important;
         }
